metodo de carga de bd en index

--- a/ProyectoFinanciera/ProyectoFinanciera.csproj
+++ b/ProyectoFinanciera/ProyectoFinanciera.csproj
@@ -137,6 +137,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\IndicadoresController.cs" />
+    <Compile Include="Controllers\llamadasIndicadores.cs" />
     <Compile Include="Controllers\SerializeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
