--- a/ProyectoFinanciera/ProyectoFinanciera.csproj
+++ b/ProyectoFinanciera/ProyectoFinanciera.csproj
@@ -135,6 +135,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\IndicadoresController.cs" />
     <Compile Include="Controllers\llamadasIndicadores.cs" />
@@ -252,6 +253,11 @@
     <Content Include="Views\Indicadores\basicaPasiva.cshtml" />
     <Content Include="Views\Indicadores\politicaMonetaria.cshtml" />
     <Content Include="Views\Indicadores\comportamientoIndicadores.cshtml" />
+    <Content Include="Views\Clientes\Create.cshtml" />
+    <Content Include="Views\Clientes\Delete.cshtml" />
+    <Content Include="Views\Clientes\Details.cshtml" />
+    <Content Include="Views\Clientes\Edit.cshtml" />
+    <Content Include="Views\Clientes\Index.cshtml" />
     <None Include="Web References\indicadoresReference\wsindicadoreseconomicos.disco" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
