--- a/ProyectoFinanciera/Web.config
+++ b/ProyectoFinanciera/Web.config
@@ -21,6 +21,17 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
+  <system.net>
+    <mailSettings>
+      <smtp from="elprogresofinanciera@gmail.com">
+        <network host="smtp.gmail.com"
+                 port="587"
+                 userName="elprogresofinanciera@gmail.com"
+                 password="passwordprogra5"
+                 enableSsl="true" />
+      </smtp>
+    </mailSettings>
+  </system.net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
