correo con indicadores a los suscriptores

--- a/ProyectoFinanciera/ProyectoFinanciera.csproj
+++ b/ProyectoFinanciera/ProyectoFinanciera.csproj
@@ -204,6 +204,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\images\092387dd-e036-4842-85e1-d40f738c7537_200x200.png" />
     <Content Include="Content\images\644fc4d4-c773-47b3-9f3e-31d245fd9684_200x200.png" />
+    <Content Include="Content\images\d5827044-9927-4ec5-b205-fb6cdc646ab8_200x200.png" />
     <Content Include="Content\images\imagen1.png" />
     <Content Include="Content\images\imagen2.jpg" />
     <Content Include="Content\images\imagen3.png" />
